# time-tzdb

./: Cargo.toml  rustfmt.toml
.github/workflows/: build.yaml
time-tzdb/: Cargo.toml
time-tzdb-generator/: Cargo.toml
time-tzdb-generator/src/: main.rs  modules.rs  to_code.rs
time-tzdb/src/: lib.rs  raw_info.rs
