[package]
name = "time-tzdb-generator"
version = "0.1.0"
authors = ["Jacob Pratt <open-source@jhpratt.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.70"
convert_case = "0.6.0"
once_cell = "1.17.1"
pico-args = "0.5.0"
regex = { version = "1.7.3", default-features = false, features = ["std"] }
tempfile = "3.5.0"
tzif = "0.2.1"
walkdir = "2.3.3"
